# data-analyst-agent-strands

./: .dockerignore  .gitignore  README.md  pyproject.toml
.chainlit/: config.toml
.github/workflows/: ci.yml
agent/: Dockerfile  Dockerfile.agentcore  README.md  agent.py  agentcore_app.py  default_python_shell_job.py  main.py  sandbox_client.py  setup_glue_job_prereqs.sh
agent/server/: main.py
agent/skills/build-pipeline/: SKILL.md
agent/skills/project-structure/: SKILL.md
agent/skills/sandbox-artifacts/: SKILL.md
agent/target_repo_template/: README.md
agent_server/: __init__.py  app.py  events.py  observability.py  sandbox_discovery.py  sandbox_pool.py  sessions.py  streaming.py
docs/: agent-evals-research.md  eval-stack-decisions.md
eval/: README.md  __init__.py  run.py
eval/checks/: __init__.py  text_contains.py
eval/goldens/: README.md  athena_smoke.json  refusals_and_gotchas.json  sales_smoke.json  taxi_smoke.json
eval/runners/: __init__.py  run_agent.py
frontend/: Dockerfile  app.py  chainlit_schema_sqlite.sql  hackathon_app.py
frontend/.chainlit/: config.toml
gateway/: Dockerfile  haproxy.cfg
infra/: README.md  app.py  cdk.json
infra/policies/: README.md
infra/stacks/: auth.py  compute.py  data.py  ecr.py  network.py
public/: sidebar.js  stylesheet.css
sandbox/: Dockerfile  auth.py  kernel.py  models.py  requirements.txt  server.py
scripts/: bootstrap.sh  bootstrap_phoenix_db.py  bootstrap_phoenix_db.sh  deploy.sh  deploy_sandbox.sh  hackathon_bootstrap.py  hackathon_build_wheelhouse.py  hackathon_deploy.py  hackathon_seed_company_updates.py  hackathon_seed_gold.py  portforward_agent.sh  portforward_gateway.sh  portforward_phoenix.sh  print_agent_auth.sh  run_agent_local.sh  run_local_stack.sh  teardown_dev_stack.sh  upload_dataset.py  upload_sales_data.py  upload_taxi_data.py
tests/data_analyst_agent/: conftest.py  test_sandbox_client.py  test_sandbox_discovery.py  test_sandbox_pool.py
